assets/pages/new-contributions-landing/contributionsLanding.scss
// -----  gu-sass ----- //

@import '~stylesheets/gu-sass/gu-sass';
@import '~components/progressMessage/progressMessage';
@import '~components/spinners/animatedDots';
@import '~components/directDebit/directDebitPopUpForm/directDebitPopUpForm';
@import '~components/directDebit/directDebitForm/directDebitForm';
@import '~components/errorMessage/errorMessage';

body {
  min-height: 100vh;
}

.gu-content {
  position: relative;
  z-index: 0;
  overflow: hidden;
}

.gu-content--contribution-form {
  background: #f1f8fc;
}

.gu-content--contribution-thankyou {
  background: gu-colour(news-garnett-highlight);
}

.gu-content__main {
  position: relative;
}

.gu-content__bg svg {
  display: block;
}

/*= HEADER */

header[role="banner"] {
  background-color: gu-colour(nav-faded);
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
  position: relative;
  z-index: 1;
}

.glogo {
  width: 69px;
  height: 69px;
  position: relative;
}

.glogo .svg-roundel {
  width: 100%;
  height: 100%;
}

.countryGroups {
  background: gu-colour(garnett-neutral-5);
  border: 1px solid gu-colour(garnett-neutral-4);
  font-family: $gu-text-sans-web;
  margin-top: $gu-v-spacing;
  max-width: 355px;
  padding: 0;
  width: 100%;
}

// Safari doesn't respect styles applied to <summary> so we need this wrapper div
.countryGroups__summary-wrapper {
  align-items: center;
  color: gu-colour(garnett-neutral-2);
  display: flex;
  fill: currentColor;
  height: 40px;
  outline: none;
  transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
}

.countryGroups:not([open]) > :not(summary) {
  display: none;
}

.countryGroups__label {
  flex: 1;
}

.countryGroups .icon {
  text-align: center;
  width: 40px;
}

.countryGroups .svg-chevron {
  width: 19px;
  height: 10px;
}

.countryGroups[open] .svg-chevron {
  transform: rotate(180deg);
}

.countryGroups .svg-checkmark {
  width: 18px;
  height: 14px;
}

.countryGroups .svg-globe {
  padding: 0 $gu-v-spacing;
  width: 14px;
  height: 14px;
}

.countryGroups summary:hover,
.countryGroups summary:focus {
  box-shadow: 0 0 0 3px gu-colour(news-garnett-highlight);
  color: inherit;
}

.countryGroups summary::-webkit-details-marker {
  display: none;
}

.countryGroups__list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.countryGroups__item > a {
  color: inherit;
  display: flex;
  padding: 0 40px;
  line-height: 40px;
  text-decoration: none;
}

.countryGroups__item > a:hover,
.countryGroups__item > a:focus {
  background: gu-colour(news-garnett-highlight);
  font-weight: bold;
}

/*= FOOTER */

footer[role="contentinfo"] {
  background: gu-colour(media-garnett-main-1);
  color: gu-colour(garnett-neutral-2);
  padding-bottom: $gu-v-spacing * 2;
  font-size: 12px;
}

footer[role="contentinfo"] a {
  color: gu-colour(garnett-neutral-5);
}

.component-footer__content {
  padding-top: $gu-v-spacing;
}

/*= CONTENT */
.gu-content__content {
  background: gu-colour(garnett-neutral-5);
  padding: 0 10px;
  overflow: hidden;
}

/*= TYPOGRAPHY */
body {
  color: gu-colour(media-garnett-main-1);
  font: normal 16px/1.5 $gu-text-egyptian-web;
}

.header {
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
  color: gu-colour(garnett-neutral-1);
  font: bold 32px/1.15 $gu-headline;
  margin: 0 -10px;
  padding: 0 10px $gu-v-spacing;
}

input,
select,
textarea,
button {
  font: inherit;
}

.blurb {
  font: 100 16px/1.25 $gu-headline;
  margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
}

footer[role="contentinfo"] {
  font-family: $gu-text-sans-web;
}

/*= BREAKPOINTS */

header[role="banner"] {
  height: 75px;
}

header[role="banner"],
footer[role="contentinfo"] {
  display: flex;
}

header[role="banner"] {
  align-items: flex-start;
  flex-direction: row-reverse;
  justify-content: space-between;
}

@include mq($from: mobile, $until: tablet) {
  .header {
    border: 0;
    position: absolute;
    top: 0;
    left: 10px;
    width: 290px;
  }

  .glogo {
    top: 10px;
    right: 10px;
  }

  .gu-content__main {
    display: flex;
    flex-direction: column-reverse;
  }

  .gu-content__bg {
    height: 280px;
    position: relative;
  }

  .gu-content__bg .svg-contributions-bg-desktop {
    display: none;
  }

  .gu-content__bg .svg-contributions-bg-mobile {
    bottom: 0;
    height: 223px;
    left: 50%;
    position: absolute;
    transform: translate(-50%,0);
    width: 375px;
  }

  .countryGroups {
    margin-left: 10px;
    text-overflow: ellipsis;
    width: 185px;
    white-space: nowrap;
  }

  .countryGroups summary {
    padding-left: 10px;
  }

  .countryGroups .svg-globe {
    display: none;
  }

  .countryGroups__item > a {
    padding-left: 10px;
  }
}

@include mq($from: tablet) {
  header[role="banner"] {
    padding: 0 calc(50% - 350px);
    width: 700px;
  }

  footer[role="contentinfo"] {
    padding: 0 calc(50% - 350px) ($gu-v-spacing * 2);
    width: 700px;
  }

  .glogo {
    top: $gu-v-spacing * 2;
  }

  .countryGroups__item .icon {
    margin-left: -40px;
  }

  .gu-content__content {
    border-color: gu-colour(garnett-neutral-4);
    border-style: none solid;
    border-width: 0 1px;
    width: 380px;
    margin-left: calc(50% - 361px); /* account for the 11px of negative margin */
  }

  .gu-content__bg {
    height: 580px;
    left: 0;
    position: absolute;
    top: 245px;
    width: 100%;
    z-index: -1;
  }

  .gu-content__bg svg {
    bottom: 0;
    height: 580px;
    left: 50%;
    position: absolute;
    transform: translate(-50%,0);
    width: 1400px;
  }

  .gu-content__main .svg-contributions-bg-mobile {
    display: none;
  }
}

@include mq($from: leftCol) {
  header[role="banner"] {
    padding: 0 calc(50% - 550px) 0 calc(50% - 390px);
    width: 940px;
  }

  footer[role="contentinfo"] {
    padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
    width: 940px;
  }

  .gu-content__content {
    width: 380px;
    margin-left: calc(50% - 401px); /* account for the 11px of negative margin */
  }
}
/* ... */

